# projeto-final-antonio_almeida

./: README.md
Etapa4/Firmware/dataharbor-iot/: CMakeLists.txt  dataharbor-iot.c
Etapa4/Firmware/dataharbor-iot/content/: 404.html  index.shtml  led0.shtml  led1.shtml  ledfail.shtml  temp.json  test.shtml
Etapa4/proj-dataharbor-iot-main/: classtocss_global.css  docker-compose.BAK  docker-compose.yml  package-lock.json  pom.xml
Etapa4/proj-dataharbor-iot-main/back/: Dockerfile
Etapa4/proj-dataharbor-iot-main/banco-docker/: Dockerfile
Etapa4/proj-dataharbor-iot-main/dados/: dados.sql
Etapa4/proj-dataharbor-iot-main/front/: Dockerfile  angular.json  package-lock.json  package.json
Etapa4/proj-dataharbor-iot-main/front/src/: styles.scss
Etapa4/proj-dataharbor-iot-main/front/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
Etapa4/proj-dataharbor-iot-main/front/src/app/auth/: auth.guard.ts  login.module.ts  login.service.ts
Etapa4/proj-dataharbor-iot-main/front/src/app/institutional/: institutional.component.html
Etapa4/proj-dataharbor-iot-main/front/src/app/interceptors/: auth.interceptor.ts
Etapa4/proj-dataharbor-iot-main/front/src/app/register/: phoneValidator.ts  register.component.html  register.component.scss  register.component.ts  register.module.ts  user.service.ts
Etapa4/proj-dataharbor-iot-main/front/src/environments/: environment.prod.ts  environment.ts
Etapa4/proj-dataharbor-iot-main/nginx/: bdl.conf
Etapa4/proj-dataharbor-iot-main/src/main/resources/: application.properties
(+36 files in other folders)
